--- a/actividades/3_imágenes_astronómicas.ipynb
+++ b/actividades/3_imágenes_astronómicas.ipynb
@@ -111,11 +111,11 @@
    "source": [
     "from torch.utils.data import TensorDataset, DataLoader, Subset \n",
     "\n",
-    "with gzip.open(\"../data/images.pgz\", mode=\"r\") as f:\n",
+    "with gzip.open(\"../data/images2.pgz\", mode=\"r\") as f:\n",
     "    astro_image, astro_label = pickle.load(f)\n",
     "\n",
     "# Reescalamiento a [0, 1]\n",
-    "astro_image_tensor = torch.from_numpy(astro_image[:, :-1].astype('float32')).reshape(-1, 3, 21, 21)\n",
+    "astro_image_tensor = torch.from_numpy(astro_image.astype('float32')).reshape(-1, 3, 21, 21)\n",
     "im_min = astro_image_tensor.min(dim=-1).values.min(dim=-1).values.reshape(-1, 3, 1, 1)\n",
     "im_max = astro_image_tensor.max(dim=-1).values.max(dim=-1).values.reshape(-1, 3, 1, 1)\n",
     "astro_image_tensor = (astro_image_tensor - im_min)/(im_max-im_min)\n",
