path correcto a imagenes

--- a/actividades/3_imágenes_astronómicas.ipynb
+++ b/actividades/3_imágenes_astronómicas.ipynb
@@ -148,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El conjunto completo está en `shared/astro/HiTS` como archivo csv"
+    "El conjunto completo está en `/home/shared/astro/HiTS/HiTS_500k/images_train.csv` como archivo csv"
    ]
   },
   {
